--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,4 +16,7 @@
     outline: none;
     box-shadow: 0px 0px 0px 4px $primary400;
   }
+  a:hover {
+    color: $primary600;
+  }
 }
